data cleaned and preprocessed

--- a/notebooks/data_cleaning_preprocessing.ipynb
+++ b/notebooks/data_cleaning_preprocessing.ipynb
@@ -582,9 +582,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66d236c2-6b9c-4284-a5c5-4e0daa42c322",
+   "metadata": {},
+   "source": [
+    "## Text Preprocessing and Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "9030dc95-ddd6-4c9b-858a-4517cbc59ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>posts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>INFJ</td>\n",
+       "      <td>intj moment sportscenter not top ten play pran...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENTP</td>\n",
+       "      <td>im finding lack post alarming sex boring posit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>INTP</td>\n",
+       "      <td>good one course say know thats blessing curse ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>INTJ</td>\n",
+       "      <td>dear intp enjoyed conversation day esoteric ga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ENTJ</td>\n",
+       "      <td>youre fired thats another silly misconception ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   type                                              posts\n",
+       "0  INFJ  intj moment sportscenter not top ten play pran...\n",
+       "1  ENTP  im finding lack post alarming sex boring posit...\n",
+       "2  INTP  good one course say know thats blessing curse ...\n",
+       "3  INTJ  dear intp enjoyed conversation day esoteric ga...\n",
+       "4  ENTJ  youre fired thats another silly misconception ..."
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pickle\n",
+    "\n",
+    " \n",
+    "df = pd.read_csv('../data/cleaned_dataset.csv') \n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "fbeb91e8-60ef-48cc-8071-314a80fb8def",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MBTI Type to Label mapping:\n",
+      "{'ENFJ': np.int64(0), 'ENFP': np.int64(1), 'ENTJ': np.int64(2), 'ENTP': np.int64(3), 'ESFJ': np.int64(4), 'ESFP': np.int64(5), 'ESTJ': np.int64(6), 'ESTP': np.int64(7), 'INFJ': np.int64(8), 'INFP': np.int64(9), 'INTJ': np.int64(10), 'INTP': np.int64(11), 'ISFJ': np.int64(12), 'ISFP': np.int64(13), 'ISTJ': np.int64(14), 'ISTP': np.int64(15)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Encode 'type' column into numeric labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "df['label'] = label_encoder.fit_transform(df['type'])\n",
+    "\n",
+    "# Check mapping\n",
+    "label_mapping = dict(zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_)))\n",
+    "print(\"MBTI Type to Label mapping:\")\n",
+    "print(label_mapping)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "bb1408fd-db0c-4699-86b2-34cbabc134b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total unique words: 148313\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking unique words to set feature limit\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "vectorizer = CountVectorizer()\n",
+    "X_counts = vectorizer.fit_transform(df['posts'])\n",
+    "print(f\"Total unique words: {len(vectorizer.vocabulary_)}\")                     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "df2c7893-7e08-4825-8f00-2c5fa2d8418a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorize the cleaned text using TF-IDF\n",
+    "tfidf = TfidfVectorizer(max_features=3000) \n",
+    "X = tfidf.fit_transform(df['posts'])  #input features\n",
+    "y = df['label'] #target labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "8da583bc-caa9-4f99-9778-1876966e30b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split into train and test sets \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "7ec45e32-17b9-4cbb-b4a6-0d7ffadf90aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " All preprocessing done. Data saved for model training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save vectorizer, label encoder, and data for reuse\n",
+    "with open('../data/tfidf_vectorizer.pkl', 'wb') as f:\n",
+    "    pickle.dump(tfidf, f)\n",
+    "\n",
+    "with open('../data/label_encoder.pkl', 'wb') as f:\n",
+    "    pickle.dump(label_encoder, f)\n",
+    "\n",
+    "with open('../data/X_train.pkl', 'wb') as f:\n",
+    "    pickle.dump(X_train, f)\n",
+    "\n",
+    "with open('../data/X_test.pkl', 'wb') as f:\n",
+    "    pickle.dump(X_test, f)\n",
+    "\n",
+    "with open('../data/y_train.pkl', 'wb') as f:\n",
+    "    pickle.dump(y_train, f)\n",
+    "\n",
+    "with open('../data/y_test.pkl', 'wb') as f:\n",
+    "    pickle.dump(y_test, f)\n",
+    "\n",
+    "\n",
+    "print(\" All preprocessing done. Data saved for model training.\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e101116-20fc-48c0-96cb-d457f3f7a574",
+   "id": "899addcb-a649-4ae1-a145-3513769b3637",
    "metadata": {},
    "outputs": [],
    "source": []
