--- a/notebooks/data_cleaning_preprocessing.ipynb
+++ b/notebooks/data_cleaning_preprocessing.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "015fda23-4f7a-4c8e-ae59-228413db555b",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "4  ENTJ  'You're fired.|||That's another silly misconce..."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "9030dc95-ddd6-4c9b-858a-4517cbc59ff7",
    "metadata": {},
    "outputs": [
@@ -659,13 +659,13 @@
        "4  ENTJ  youre fired thats another silly misconception ..."
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pickle\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "fbeb91e8-60ef-48cc-8071-314a80fb8def",
    "metadata": {},
    "outputs": [
@@ -692,11 +692,11 @@
    ],
    "source": [
     "\n",
-    "# Encode 'type' column into numeric labels\n",
+    "# Encode type column into numeric labels\n",
     "label_encoder = LabelEncoder()\n",
     "df['label'] = label_encoder.fit_transform(df['type'])\n",
     "\n",
-    "# Check mapping\n",
+    "# Checking mapping\n",
     "label_mapping = dict(zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_)))\n",
     "print(\"MBTI Type to Label mapping:\")\n",
     "print(label_mapping)\n"
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "bb1408fd-db0c-4699-86b2-34cbabc134b3",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "df2c7893-7e08-4825-8f00-2c5fa2d8418a",
    "metadata": {},
    "outputs": [],
@@ -741,18 +741,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
+   "id": "28782be4-f72b-41f2-9d15-9fe7c009401b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert sparse matrix to dense array  for scaling\n",
+    "X_dense = X.toarray()\n",
+    "\n",
+    "# Apply StandardScaler to scale the features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X_dense) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "8da583bc-caa9-4f99-9778-1876966e30b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split into train and test sets \n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "id": "7ec45e32-17b9-4cbb-b4a6-0d7ffadf90aa",
    "metadata": {},
    "outputs": [
@@ -772,6 +787,9 @@
     "with open('../data/label_encoder.pkl', 'wb') as f:\n",
     "    pickle.dump(label_encoder, f)\n",
     "\n",
+    "with open('../data/scaler.pkl', 'wb') as f:\n",
+    "    pickle.dump(scaler, f)\n",
+    "\n",
     "with open('../data/X_train.pkl', 'wb') as f:\n",
     "    pickle.dump(X_train, f)\n",
     "\n",
@@ -783,7 +801,6 @@
     "\n",
     "with open('../data/y_test.pkl', 'wb') as f:\n",
     "    pickle.dump(y_test, f)\n",
-    "\n",
     "\n",
     "print(\" All preprocessing done. Data saved for model training.\")\n"
    ]
